# OpenEnv-Project

./: .gitignore  README.md  client.py  config.py  inference.py  inference_results.json  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  environment.py
